--- a/index_en.html
+++ b/index_en.html
@@ -39,26 +39,38 @@
           <div class="col s4 side">
             <h5>PERSONAL</h5>
             <ul>
-              <li>• 29 years old</li>
+              <li>• 30 years old</li>
               <li>• Sao Paulo - Brazil</li>
             </ul>
             <br>
             <h5>GRADUATIONS</h5>
             <ul>
               <li>• <span class="strong gray">Post graduated</span> in Business
-              Management focused in Marketing - ESPM/SP - September 2015</li>
+              Management and Marketing - ESPM/SP - September 2015</li>
               <li>• <span class="strong gray">Graduated</span> in Advertisement
                 and Marketing - ESPM/SP - July 2012</li>
+            </ul>
+            <br>
+            <h5>CERTIFICATES</h5>
+            <ul>
+              <li>• <span class="strong gray">Ruby on Rails Development
+                  </span> – Campus
+                Code – October/2016</li>
+              <li>• <span class="strong gray">Front End Development</span> – Freecodecamp.com – March/2016</li>
+              <li>• <span class="strong gray">Web Analytics </span>– DP6 - 2015</li>
+              <li>• <span class="strong gray">Introduction to UX Design </span>– Miami Ad School/ESPM – March/2013</li>
             </ul>
             <br>
             <h5>SKILLS</h5>
             <p class="skill">Advanced English</p>
             <p class="skill">Basic Spanish</p>
+            <p class="skill">Basic German</p>
             <p class="skill">HTML5</p>
             <p class="skill">Ruby</p>
             <p class="skill">Rails</p>
             <p class="skill">Sinatra</p>
             <p class="skill">Elixir</p>
+            <p class="skill">Python</p>
             <p class="skill">Javascript</p>
             <p class="skill">Docker</p>
             <p class="skill">Vue.js</p>
@@ -76,17 +88,33 @@
             <br>
           </div>
           <div class="col s8 main">
+            <h5>SUMMARY</h5>
+            <div class="description">
+              I am a Full Stack Web Developer experienced with Ruby, Elixir, Javascript and Python. I build complete web systems such as websites, APIs,
+              admins and more. Currently working for one of the major internet
+              services company in Brazil, mainly with Ruby and Elixir.<br><br>
+              I have a Marketing background, which gave me great people skills
+              and made me very customer driven. This prior experience enabled me
+              to quickly grow in the development career, where now I lead two
+              software engineering teams.
+            </div>
             <h5>PROFESSIONAL EXPERIENCES</h5>
             <div class="exp">
               <p class='company strong gray'>Locaweb</p>
-              <p class='role'>Team Coordinator (since June/18)</p>
-              <p class='description'>Coordination of two teams (Domain Registration and SSL). Responsible for the Agile process and team management.</p>
+              <p class='role'>Team Leader (since June/18)</p>
+              <p class='description'>Coordination of two teams (Domain
+              Registration and SSL). Responsible for the Agile process, team
+              management, pull request reviews and high level technical
+              decisions.</p>
             </div>
             <div class="exp">
               <p class='company strong gray'>Locaweb</p>
               <p class='role'>Ruby Software Developer (July/17 to June/18)</p>
               <p class='description'>
-              Development of new features and maintenance of Domain Registration's systems using Ruby (Rails and Sinatra), MongoDB, PostgreSQL, Redis, Memcached and InfluxDB
+              Development of new features and maintenance of Domain
+              Registration's systems using Ruby (Rails and Sinatra), MongoDB,
+              PostgreSQL, Redis and InfluxDB. API intregrations, Ruby
+              Gems, OSS contributions.
               </p>
             </div>
             <div class="exp">
@@ -95,7 +123,7 @@
               July/17)</p>
               <p class='description'>Full stack web development for Campus
               Code's partner companies using Ruby language and mainly the Ruby
-              on Rails framework.
+              on Rails framework with PostgreSQL.
               </p>
             </div>
             <div class="exp">
@@ -117,14 +145,6 @@
               Vivo), focusing on cost reduction. Active voice in projects to
               improve the channel.</p>
             </div>
-            <h5>CERTIFICATES</h5>
-            <ul>
-              <li>• Web Immersion - Ruby on Rails Development training – Campus
-                Code – October/2016</li>
-              <li>• Front End Development – Freecodecamp.com – March/2016</li>
-              <li>• Web Analytics – DP6 - 2015</li>
-              <li>• Introduction to UX Design – Miami Ad School/ESPM – March/2013</li>
-            </ul>
           </div>
         </div>
       </div>
