Update english CV

--- a/index_en.html
+++ b/index_en.html
@@ -53,9 +53,7 @@
             <br>
             <h5>CERTIFICATES</h5>
             <ul>
-              <li>• <span class="strong gray">Ruby on Rails Development
-                  </span> – Campus
-                Code – October/2016</li>
+              <li>• <span class="strong gray">Ruby on Rails Development </span> – Campus Code – October/2016</li>
               <li>• <span class="strong gray">Front End Development</span> – Freecodecamp.com – March/2016</li>
               <li>• <span class="strong gray">Web Analytics </span>– DP6 - 2015</li>
               <li>• <span class="strong gray">Introduction to UX Design </span>– Miami Ad School/ESPM – March/2013</li>
@@ -102,10 +100,10 @@
             <div class="exp">
               <p class='company strong gray'>Locaweb</p>
               <p class='role'>Team Leader (since June/18)</p>
-              <p class='description'>Coordination of two teams (Domain
-              Registration and SSL). Responsible for the Agile process, team
-              management, pull request reviews and high level technical
-              decisions.</p>
+              <p class='description'>Leader of two teams (Domain
+              Registration and SSL). Responsible for the Agile process (we use
+              Kanban), team management, pull request reviews and technical
+              decisions. I still code in Ruby and Elixir.</p>
             </div>
             <div class="exp">
               <p class='company strong gray'>Locaweb</p>
@@ -114,7 +112,8 @@
               Development of new features and maintenance of Domain
               Registration's systems using Ruby (Rails and Sinatra), MongoDB,
               PostgreSQL, Redis and InfluxDB. API intregrations, Ruby
-              Gems, OSS contributions.
+              Gems, OSS contributions. We use Git for version control, and
+              Gitlab CI and Jenkins for deployments.
               </p>
             </div>
             <div class="exp">
